--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,11 @@ body>h2 {
 	margin: 1rem;
 }
 
+.aligncenter {
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+
 #content>p, #content>h1, #content>h2, #content>h3 {
 	margin: 1rem;
 }
