--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,10 @@ body>h2 {
 	margin: 1rem;
 }
 
-.aligncenter {
+.resumediv {
 	margin-left: 1rem;
 	margin-right: 1rem;
+	height: 100vh;
 }
 
 #content>p, #content>h1, #content>h2, #content>h3 {
