--- a/css/styles.css
+++ b/css/styles.css
@@ -57,8 +57,9 @@ body>h2 {
 }
 
 .resumediv {
-	margin-left: 1rem;
-	margin-right: 1rem;
+	margin-left: 2rem;
+	margin-right: 2rem;
+	margin-bottom: 2rem;
 	height: 100vh;
 }
 
